--- a/templates/default/redis.conf.erb
+++ b/templates/default/redis.conf.erb
@@ -31,7 +31,7 @@ loglevel <%= node['redis']['loglevel'] %>
 # Specify the log file name. Also 'stdout' can be used to force
 # the demon to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /var/log/redis/redis-server.log
+logfile <%= node['redis']['basedir'] %>/redis-server.log
 
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
@@ -66,7 +66,7 @@ dbfilename dump.rdb
 
 # For default save/load DB in/from the working directory
 # Note that you must specify a directory not a file name.
-dir /var/lib/redis
+dir <%= node['redis']['basedir'] %>
 
 ################################# REPLICATION #################################
 
